--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,51 @@
 body {
-	padding-top:70px;
+	padding-top: 70px;
 	width: 100%;
-    height: 100%;
+	height: 100%;
 	width: 100%;
-    height: 100%;
-    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+	height: 100%;
+	font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial,
+		sans-serif;
+	background-color: #FFCCBC;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+}
+
+.footer-top span {
+	padding-left: 10px;
+	padding-right: 10px;
+	font-weight: bold;
+}
+
+.footer-bottom span {
+	padding-left: 10px;
+	padding-right: 10px;
+	font-weight: bold;
+	font-size: 12px;
+}
+
+.footer-top {
+	text-align: center;
+	padding-bottom: 20px;
+	border-bottom: 1px solid grey;
+	width: 30%;
+	margin: 0 auto;
+}
+
+.footer-bottom {
+	text-align: center;
+	padding-top: 20px;
+	width: 50%;
+	margin: 0 auto;
+}
+
+.footer-border {
+	border-left: 1px solid grey;
 }
 
 a {
@@ -24,8 +65,8 @@ a {
 
 .odd {
 	background-color: #f2f9ff;
-	
 }
+
 .even {
 	background-color: #eceff3;
 }
